# llama-chan

./: .yarnrc.yml  README.md  package-lock.json  package.json  rome.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/setting/: SettingButton.tsx  SettingDrawerWrapper.tsx
